support_tools/swigwin-3.0.12/Examples/test-suite/errors/pp_variable_args.i
%module xxx


%define VARARGS_WRONG(a,
x,
...,
 b)
xxx
%enddef

